# adeka-playground

./: .env.example  .gitignore  README.md  pyproject.toml
adeka/agents/: init_agent.py
adeka/agents/AIrxiv/: agent.py
adeka/agents/generalAI/: agent.py
adeka/agents/wikipedAI/: agent.py
adeka/configs/: ai_config.py  main_config.py
adeka/tools/: airxiv_tool.py  wikipedai_tool.py
